--- a/Editor/UnityEssentials.TreeViewGUI.asmdef
+++ b/Editor/UnityEssentials.TreeViewGUI.asmdef
@@ -1,13 +1,14 @@
 {
     "name": "UnityEssentials.TreeViewGUI",
-    "allowUnsafeCode": false,
-    "noEngineReferences": false,
-    "overrideReferences": false,
-    "autoReferenced": true,
     "rootNamespace": "UnityEssentials",
     "references": [],
-    "precompiledReferences": [],
     "includePlatforms": [],
     "excludePlatforms": [],
-    "defineConstraints": []
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
