--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "com.unityessentials.treeviewgui",
+  "name": "com.unityessentials.simpletreeview",
   "version": "1.0.0",
-  "displayName": "UnityEssentials TreeViewGUI",
+  "displayName": "UnityEssentials SimpleTreeView",
   "description": "This is a part of the UnityEssentials Ecosystem",
   "unity": "2022.1",
   "unityRelease": null,
