--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "com.unityessentials.simpletreeview",
   "version": "1.0.0",
-  "displayName": "UnityEssentials SimpleTreeView",
-  "description": "This is a part of the UnityEssentials Ecosystem",
-  "unity": "2022.1",
+  "displayName": "Unity Editor Helper SimpleTreeView",
+  "description": "",
+  "unity": "6000.0",
   "unityRelease": null,
-  "dependencies": {
-    "com.unityessentials.core": "1.0.0"
-  },
+  "dependencies": {},
   "keywords": [],
   "author": {
     "name": "Unity Essentials",
