--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "com.unityessentials.simpletreeview",
   "version": "1.0.0",
   "displayName": "Unity Editor Helper SimpleTreeView",
-  "description": "",
+  "description": "This is a part of the UnityEssentials Ecosystem",
   "unity": "6000.0",
   "unityRelease": null,
   "dependencies": {},
