--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "com.unityessentials.simpletreeview",
   "version": "1.0.0",
-  "displayName": "Unity Editor Helper SimpleTreeView",
+  "displayName": "Unity Editor Drawer SimpleTreeView",
   "description": "This is a part of the UnityEssentials Ecosystem",
   "unity": "6000.0",
   "unityRelease": null,
